; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/dpu1/extr_dpu_encoder_phys_cmd.c_dpu_encoder_phys_cmd_get_hw_resources.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/dpu1/extr_dpu_encoder_phys_cmd.c_dpu_encoder_phys_cmd_get_hw_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dpu_encoder_phys = type { i64 }
%struct.dpu_encoder_hw_resources = type { i32* }

@INTF_MODE_CMD = common dso_local global i32 0, align 4
@INTF_0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dpu_encoder_phys*, %struct.dpu_encoder_hw_resources*)* @dpu_encoder_phys_cmd_get_hw_resources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dpu_encoder_phys_cmd_get_hw_resources(%struct.dpu_encoder_phys* %0, %struct.dpu_encoder_hw_resources* %1) #0 {
  %3 = alloca %struct.dpu_encoder_phys*, align 8
  %4 = alloca %struct.dpu_encoder_hw_resources*, align 8
  store %struct.dpu_encoder_phys* %0, %struct.dpu_encoder_phys** %3, align 8
  store %struct.dpu_encoder_hw_resources* %1, %struct.dpu_encoder_hw_resources** %4, align 8
  %5 = load i32, i32* @INTF_MODE_CMD, align 4
  %6 = load %struct.dpu_encoder_hw_resources*, %struct.dpu_encoder_hw_resources** %4, align 8
  %7 = getelementptr inbounds %struct.dpu_encoder_hw_resources, %struct.dpu_encoder_hw_resources* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load %struct.dpu_encoder_phys*, %struct.dpu_encoder_phys** %3, align 8
  %10 = getelementptr inbounds %struct.dpu_encoder_phys, %struct.dpu_encoder_phys* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @INTF_0, align 8
  %13 = sub i64 %11, %12
  %14 = getelementptr inbounds i32, i32* %8, i64 %13
  store i32 %5, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
